Fix letters and migration

--- a/tasks/templates/tasks/export.html
+++ b/tasks/templates/tasks/export.html
@@ -4,7 +4,7 @@
 
 {% block main_content %}
   <h1>Экспорт задач</h1>
-  <p>На вашу почту придёт емейл с задачами. Уточните список.</p>
+  <p>На вашу почту придёт письмо со списком задач. Уточните список.</p>
   <form action="." method="post">
     {{ form.as_p }}
     {% csrf_token %}
