--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -7,7 +7,7 @@
   {% if form.errors %}
     <p>Ошибка: пароль или логин неправильные. Попробуйте снова</p>
   {% else %}
-    <p>введите логин/пароль:</p>
+    <p>Введите логин/пароль:</p>
   {% endif %}
   <form action="." method="POST" class="login">
     {{ form.as_p }}
