--- a/templates/registration/password_change_done.html
+++ b/templates/registration/password_change_done.html
@@ -3,6 +3,6 @@
 {% block title %}Пароль успешно изменён{% endblock %}
 
 {% block main_content %}
-  <h1>Ваш пароль был изменён</h1>
+  <h1>Ваш пароль был изменён.</h1>
   <p>Не забудьте новый пароль.</p>
 {% endblock %}
