--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -3,6 +3,6 @@
 {% block title %}Сбросить пароль{% endblock %}
 
 {% block main_content %}
-<h1>Проверьте почту</h1>
-<p>На вашу почту должно было прийти письмо с инструкциями по смене пароля</p>
+<h1>Проверьте почту.</h1>
+<p>На вашу почту должно было прийти письмо с инструкциями по смене пароля.</p>
 {% endblock %}
