--- a/templates/registration/password_reset_email.html
+++ b/templates/registration/password_reset_email.html
@@ -2,4 +2,4 @@
 
 {{ protocol }}://{{ domain }}{% url "password_reset_confirm" uidb64=uid token=token %}
 
-На всякий случай, ваш логин на сайте: {{ user.get_username }}
+Ваш логин на сайте: {{ user.get_username }}
