--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Зарегистрироватьсяt{% endblock %}
+{% block title %}Зарегистрироваться{% endblock %}
 
 {% block main_content %}
   <h1>Создать аккаунт</h1>
