--- a/tasks/templates/tasks/list.html
+++ b/tasks/templates/tasks/list.html
@@ -9,7 +9,7 @@
 
 {% block main_content %}
   <h1>Текущие задачи</h1>
-  <p><i class="fa fa-download"></i>&nbsp;<a href="{% url "tasks:export" %}">экспорт</a></h1>
+  <p><i class="fa fa-download"></i>&nbsp;<a href="{% url "tasks:export" %}">Отправить список на почту.</a></h1>
   <ul id="todo-list">
   {% for task in tasks %}
     {% if task.is_completed %}
