--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -7,7 +7,7 @@
   <p>Используйте форму для смены пароля</p>
   <form action="." method="post">
     {{ form.as_p }}
-    <p><button type="submit">Изменить</button></p>
+    <p><button type="submit">Изменить.</button></p>
     {% csrf_token %}
   </form>
 {% endblock %}
