--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -3,6 +3,6 @@
 {% block title %}Пароль изменён{% endblock %}
 
 {% block main_content %}
-<h1>Пароль изменён</h1>
-<p>Ваш пароль был установлен. Теперь можно <a href="{% url "login" %}">залогиниться</a></p>
+<h1>Пароль изменён.</h1>
+<p>Ваш пароль был установлен. Теперь можно <a href="{% url "login" %}">войти в свой кабинет.</a></p>
 {% endblock %}
