--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -4,7 +4,7 @@
 
 {% block main_content %}
 <h1>Забыли пароль?</h1>
-<p>Введите e-mail чтобы получить новый</p>
+<p>Введите e-mail чтобы получить новый.</p>
 <form action="." method="post">
   {{ form.as_p }}
     <button type="submit">Подтвердить</button>
